--- a/app/src/main/res/layout/coordinator_layout.xml
+++ b/app/src/main/res/layout/coordinator_layout.xml
@@ -10,8 +10,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -23,17 +25,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <fragment
+    <LinearLayout
         android:id="@+id/fragment"
-        class="ge.tsu.android.myapplication.recycle.FragmentActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:visibility="invisible"
+        android:layout_marginTop="800dp"
         app:layout_constraintBottom_toTopOf="@+id/lists_recyclerview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lists_recyclerview" />
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <fragment
+            android:name="ge.tsu.android.myapplication.recycle.RecyclerViewActivity$FragmentActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/lists_recyclerview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lists_recyclerview" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
