replace RelativeLayot to elevation and add smoothScrollToPosition method

--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -4,10 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lists_recyclerview"
             android:layout_width="match_parent"
@@ -25,14 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
+            android:elevation="-10dp"
             android:src="@drawable/round_add_black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-    </FrameLayout>
-
     <FrameLayout
         android:id="@+id/fragment_container_view"
+        android:elevation="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
