--- a/app/src/main/res/layout/item_view_recycle.xml
+++ b/app/src/main/res/layout/item_view_recycle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
@@ -18,4 +18,11 @@
         android:layout_margin="16dp"
         android:layout_marginStart="16dp"
         android:text="TextView" />
+
+    <CheckBox
+        android:id="@+id/list_item_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_gravity="end"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
