--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -7,18 +7,19 @@
     android:layout_gravity="bottom">
 
 
-    <Switch
-        android:id="@+id/switcher"
-        android:layout_width="match_parent"
-        android:gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/lists_recyclerview"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <Switch-->
+<!--        android:id="@+id/switcher"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/lists_recyclerview"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lists_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="660dp"
+        android:layout_height="640dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
