--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
 	android:layout_height="match_parent"
 	android:padding="16dp"
 	android:orientation="vertical"
-	tools:context=".Settings">
+	tools:context=".Activity.SettingsActivity">
 
 
 	<CheckBox
