--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -6,6 +6,17 @@
     android:layout_gravity="center_vertical"
     android:background="#99FFFFFF">
 
+    <ImageView
+        android:id="@+id/remove_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="20dp"
+        android:maxWidth="5dp"
+        android:maxHeight="5dp"
+        android:src="@drawable/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
