--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -16,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:gravity="center"
-            android:textSize="24sp"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/title"
@@ -25,12 +25,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:gravity="center"
-            android:textSize="24sp"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/detiles"
+        android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -52,4 +52,15 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:padding="8dp" />
+
+    <TextView
+        android:id="@+id/delete_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="right"
+        android:paddingRight="16dp"
+        android:text="@string/detele_item"
+        android:textColor="@color/delete"
+        android:textSize="20dp" />
 </LinearLayout>
