--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Activity.DetailsActivity"
     android:orientation="vertical">
 
     <LinearLayout
@@ -53,14 +55,33 @@
         android:gravity="center"
         android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/delete_item"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="right"
-        android:paddingRight="16dp"
-        android:text="@string/detele_item"
-        android:textColor="@color/delete"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/edit_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:paddingLeft="16dp"
+            android:text="@string/edit_item"
+            android:textColor="@color/edit"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/delete_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:paddingRight="16dp"
+            android:text="@string/detele_item"
+            android:textColor="@color/delete"
+            android:textSize="20sp" />
+    </LinearLayout>
+
 </LinearLayout>
