--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -32,7 +32,7 @@
         android:id="@+id/detiles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="detiles"
+        android:hint="details"
         android:layout_margin="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="+"
+        android:text="add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
